syntax = "proto3";
package kentheguru;
option go_package = "pb";

message AuthenticationRequest {
  string username = 1;
  string password = 2;
}

message AuthenticationResponse {
  string token = 1;
  string error = 2;
}
